Полное завершение разработки решения ЭМУЛЯЦИЯ СОБЫТИЙ MOUSEENTER И MOUSELEAVE

--- a/www/Demos/emulateMouseEnterLeave/index.html
+++ b/www/Demos/emulateMouseEnterLeave/index.html
@@ -11,8 +11,10 @@
     <h1>Эмуляция событий "mouseenter" и "mouseleave"</h1>
     <textarea rows="10" cols="85"></textarea>
     <section>
-        <div class="animated"><span></span></div>
-        <div class="animated"><span></span></div>
+        <div class="animated"><span><a href=''>блок 1</a></span></div>
+        <div class="animated"><span><a href=''>блок 2</a></span></div>
+        <div class="animated"><span><a href=''>блок 3</a></span></div>
+        <div class="animated"><a href=''>блок 4</a></div>
     </section>
     
 </body>
