Добавление дополнительных элементов <a> на страницу

--- a/www/Demos/animate.polyfill/index.html
+++ b/www/Demos/animate.polyfill/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Полифилл "Анимация элемента"</h1>
     <section>
-        <div class="animated"><span><a href=''>блок 1</a></span></div>
+        <div class="animated"><span><a href=''>блок 1</a><a href=''>блок 2</a><a href=''>блок 3</a></span></div>
     </section>
 </body>
 </html>
