--- a/www/Demos/animate.polyfill/index.html
+++ b/www/Demos/animate.polyfill/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script defer src="/libraries/JavaScript/Browsers_Supports/latest/requestAnimationFrame/requestAnimationFrame.polyfill.min.js" type="text/javascript"></script>
     <script defer src="script.js" type="text/javascript"></script>
 </head>
 <body>
