--- a/www/Demos/animate.polyfill/index.html
+++ b/www/Demos/animate.polyfill/index.html
@@ -5,6 +5,21 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="/libraries/JavaScript/Browsers_Supports/latest/requestAnimationFrame/requestAnimationFrame.polyfill.min.js" type="text/javascript"></script>
     <script defer src="script.js" type="text/javascript"></script>
+    <script defer type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function() {
+            // Получение ссылки на объект с именем HTML-тега "а"
+            document.querySelector('span')
+                // Назначение обработчика на событие "клик по элементу"
+                .addEventListener("click", function(event){
+                    // Отмена действия по умолчанию браузера на событие
+                    event.preventDefault();
+                    // вызов метода анимации на целевом объекте
+                    event.target.animate({width:"850px"}, function(){
+                        console.log('Анимация завершена!');
+                    }, {easingFunc:'easeInOutQuint', duration:1000});
+                });
+        });
+    </script>
 </head>
 <body>
     <h1>Полифилл "Анимация элемента"</h1>
