--- a/www/Demos/animate.polyfill/index.html
+++ b/www/Demos/animate.polyfill/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script defer src="/libraries/JavaScript/Browsers_Supports/latest/requestAnimationFrame/requestAnimationFrame.polyfill.min.js" type="text/javascript"></script>
-    <script defer src="script.js" type="text/javascript"></script>
+    <script defer src="/Demos/animate.polyfill/script.min.js" type="text/javascript"></script>
     <script defer type="text/javascript">
         document.addEventListener("DOMContentLoaded", function() {
             // Получение ссылки на объект с именем HTML-тега "а"
