--- a/www/Demos/plugin.popUp/index.html
+++ b/www/Demos/plugin.popUp/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="plugin.popUp.css" rel="stylesheet" type="text/css">
-    <script defer src="/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.js" type="text/javascript"></script>
+    <link href="/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.css" rel="stylesheet" type="text/css">
+    <script defer src="/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.min.js" type="text/javascript"></script>
     <script defer type="text/javascript">
         // Явное указание на режим строгого соответствия современному стандарту
         "use strict";
@@ -14,7 +14,7 @@
         document.addEventListener("DOMContentLoaded", function(event) {
 
             // Создание экземпляра объекта "Всплывающего окна" с значением атрибута "value" кнопки в качестве ID
-            var popup = new popUp("action1", {type: "alert", header: "Уведомление", data:"Это всплывающее окно с уведомлением о каком либо действии или новости!", navigation:"minimal"});
+            var popup = new popUp("action1", {type: "alert", header: "Уведомление", data:"<p>Это всплывающее окно с уведомлением о каком либо действии или новости!</p>", navigation:"minimal"});
             
             // Получение ссылки на элемент вызывающий окно
             document.querySelector('button[value="action1"]')
