--- a/www/Demos/object.animate/index.html
+++ b/www/Demos/object.animate/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script defer src="/libraries/JavaScript/Browsers_Supports/latest/requestAnimationFrame/requestAnimationFrame.polyfill.min.js" type="text/javascript"></script>
-    <script defer src="/libraries/JavaScript/Prop&Meth_Extensions/animate.polyfill/animate.polyfill.min.js" type="text/javascript"></script>
+    <script defer src="/libraries/JavaScript/Prop&Meth_Extensions/object.animate/Function.animate.min.js" type="text/javascript"></script>
     <script defer type="text/javascript">
         document.addEventListener("DOMContentLoaded", function() {
             // Получение ссылки на объект с именем HTML-тега "а"
@@ -14,7 +14,7 @@
                     // Отмена действия по умолчанию браузера на событие
                     event.preventDefault();
                     // вызов метода анимации на целевом объекте
-                    event.target.animate({width:"850px"}, function(){
+                    animate(event.target, {width:"850px"}, function(){
                         console.log('Анимация завершена!');
                     }, {easingFunc:'easeInOutQuint', duration:1000});
                 });
