Обновление исполняемых файлов демонстрационной версии эффекта анимации

--- a/www/Demos/object.animate/index.html
+++ b/www/Demos/object.animate/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script defer src="/libraries/JavaScript/Browsers_Supports/latest/requestAnimationFrame/requestAnimationFrame.polyfill.min.js" type="text/javascript"></script>
-    <script defer src="/libraries/JavaScript/Prop&Meth_Extensions/object.animate/Function.animate.min.js" type="text/javascript"></script>
+    <script defer src="/libraries/JavaScript/Helpers/Meth.getTimingFunc/Meth.getTimingFunc.js" type="text/javascript"></script>
+    <script defer src="/libraries/JavaScript/Effects/animate/Function.animate.js" type="text/javascript"></script>
     <script defer type="text/javascript">
         document.addEventListener("DOMContentLoaded", function() {
             // Получение ссылки на объект с именем HTML-тега "а"
