--- a/www/Demos/vkGetLoginStatus/index.html
+++ b/www/Demos/vkGetLoginStatus/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <script defer src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
+    <!--
     <script defer src="vkApiMethods.js" type="text/javascript"></script>
+    -->
+    <script defer src="social.api.js" type="text/javascript"></script>
+    <script type="application/javascript">
+        "use strict";
+        // Запуск исполнения сценария JS при готовности DOM
+        document.addEventListener("DOMContentLoaded", function() {
+            //
+            var vkUser = new vkUserApi(5218692);
+            // Вывод переменной статуса авторизации посетителя сайта в консоль
+            var status = vkUser.getAuthStatus();
+            setTimeout(function(){alert(vkUser.getAuthStatus());},1000);
+            console.log(status);
+            setTimeout(function(){console.log( vkUser.getAuthStatus2() );},1000);
+        });
+    </script>
 </head>
 <body>
     <h1>Идентификация посетителя через ВКонтакте</h1>
