--- a/www/Demos/ajax/index.html
+++ b/www/Demos/ajax/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <script defer src="/libraries/JavaScript/Ajax/ajax.min.js" type="text/javascript"></script>
+        <script defer src="/library/js/Ajax/ajax.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             "use strict";
             // Исполнение скрипта после полной загрузки страницы
