--- a/www/Demos/vkLogin/index.html
+++ b/www/Demos/vkLogin/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <!---->
         <script defer src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
-        <script defer src="/libraries/JavaScript/Ajax/ajax.min.js" type="text/javascript"></script>
+        <script defer src="/library/js/Ajax/ajax.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             "use strict";
             // Исполнение скрипта после полной загрузки страницы
