--- a/www/Demos/vkLogin/index.html
+++ b/www/Demos/vkLogin/index.html
@@ -20,6 +20,32 @@
                 VK.Auth.getLoginStatus(getPageTemplate);
 
                 function getPageTemplate(response) {
+                    console.log(response);
+                    if (!response.session) {
+                        alert("not auth");
+                        var xhr1 = new ajax({
+                            url: "template/signIn.php",
+                            method: "post",
+                            error: function(result){
+                                console.log(result);
+                                document.querySelector(".window-wrapper").innerHTML = result;
+                            },
+                            success: function(result){
+                                console.log(result);
+                                //
+                                var ty = result.replace(/(\s{2,})/ig, "");
+                                console.log(ty);
+                                
+                                var rf = (/(?:<.*script[^>]*>)(.*)(?:<.*script[^>]*>)/ig).exec(ty)[1];
+                                console.log(rf);
+
+                                eval(rf);
+                                
+                                document.querySelector(".window-wrapper").innerHTML = result;
+                            }                    
+                        });
+                        return;
+                    }
                     // Создание экземпляра объекта "ajax"
                     var xhr = new ajax({
                         url: "vkLogin.php",
